# ParaCL_Compiler

./: .gitignore  CMakeLists.txt  README-R.md  README.md
.github/workflows/: ci.yml
frontend/: CMakeLists.txt
frontend/include/: config.hpp  expr_evaluator.hpp  lexer.hpp  simulator.hpp
frontend/include/codegen/: codegen.hpp  compile_path_gen.hpp  scope_stack.hpp
frontend/include/data_structures/: node.hpp
frontend/include/graph_dump/: graph_dump.hpp
frontend/include/parser/: error_collector.hpp  lexer.hpp  scope.hpp
frontend/include/simulator/: expr_evaluator.hpp  helpers.hpp  scope.hpp  simulator.hpp
frontend/src/: driver.cpp  expr_evaluator.cpp  graph_dump.cpp  lexer.l  main.cpp  parser.y  simulator.cpp
frontend/src/codegen/: codegen.cpp
frontend/tests/end_to_end/correct_program_tests/: empty_operator.txt
frontend/tests/end_to_end/standart_if/: standart_if.txt
frontend/tests/end_to_end/test_factorial/: factorial.txt
frontend/tests/end_to_end/test_func_declaration/: func_declaration.txt
frontend/tests/end_to_end/test_func_recursive_factorial/: func_recursive_factorial.txt
frontend/tests/end_to_end/test_func_simple/: simple_func.txt
frontend/tests/end_to_end/test_func_with_params/: func_with_params.txt
frontend/tests/end_to_end/test_ret_scope/: ret_scope.txt
frontend/tests/end_to_end/test_return_from_csope/: return_value_from_scope.txt
frontend/tests/end_to_end/test_return_in_func/: return_in_func.txt
frontend/tests/end_to_end/test_standart_func/: standart_func.txt
frontend/tests/unit/lexer/: CMakeLists.txt
